@@ -4,6 +4,13 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [Unreleased]
+### Changes
+* Updated Template calls to reflect the most recent Template API changes.
+
+### Added
+* Added `GetStoredAttachmentForURL()`
+
 ## [3.3.0] - 2019-01-28
 ### Changes
 * Changed signature of CreateDomain() Now returns JSON response
